--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  text-align: center;
+}
+
+.container {
+  width: 100%;
 }
 
 textarea{
   background: transparent;
-  border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
@@ -28,6 +32,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  border: solid;
 }
 
 .row {
@@ -68,4 +73,9 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+table.center{
+  margin-left: auto;
+  margin-right: auto;
 }
